// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should resolve another query 1`] = `
Object {
  "args": Object {
    "another": "query",
  },
  "headers": Object {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "host": "postman-echo.com",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
    "x-amzn-trace-id": "Root=1-629d65c9-32fd19d246c68ccb20649c43",
    "x-forwarded-port": "443",
    "x-forwarded-proto": "https",
  },
  "url": "https://postman-echo.com/get?another=query",
}
`;

exports[`should resolve queries 1`] = `
Object {
  "args": Object {
    "another": "query",
  },
  "headers": Object {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "host": "postman-echo.com",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
    "x-amzn-trace-id": "Root=1-629d661c-5220cece0d14247b1f34d5dc",
    "x-forwarded-port": "443",
    "x-forwarded-proto": "https",
  },
  "url": "https://postman-echo.com/get?another=query",
}
`;

exports[`should use Nock Back cache to resolve queries 1`] = `
Object {
  "args": Object {
    "foo1": "bar1",
    "foo2": "bar2",
  },
  "headers": Object {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "host": "postman-echo.com",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
    "x-forwarded-port": "443",
    "x-forwarded-proto": "https",
  },
  "url": "https://postman-echo.com/get?foo1=bar1&foo2=bar2",
}
`;
